--- a/src/App.css
+++ b/src/App.css
@@ -129,10 +129,24 @@ p {
   background-color: #F8F4F4;
 }
 
-/* .spacer-span {
-  min-width: 5vw;
-  max-width: 20vw;
-} */
+.spacer-span {
+  display: flex;
+  align-items: center;
+}
+
+.spacer-span a {
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: #1b616e;
+  color: #F8F4F4;
+  font-size: 10px;
+  padding: 0px 8px;
+}
+
+.spacer-span a:hover {
+  text-decoration: underline;
+  color: #F8F4F4;
+}
 
 #title {
   max-width: 100%;
@@ -175,6 +189,10 @@ p {
   color: #F8F4F4;
   font-size: calc(10px + 1vw);
   padding: 0px 8px;
+}
+
+#menu #switch-lang {
+  font-size: 12px;
 }
 
 .splash-span {
