--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@ p a {
   text-decoration: underline;
 }
 
+h1 a, h2 a, h3 a, h4 a {
+  color: black;
+}
+
 p a:hover, h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover {
   color: #1b616e;
 }
@@ -403,6 +407,10 @@ span img {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.book-image {
+  height: 20vw;
 }
 
 @media only screen and (max-width: 884px) {
